@startuml
'https://plantuml.com/class-diagram

interface IContent {
  +showContent(JPanel): String
}

abstract class Content {
    #instance: UserSession
    #frontEnd: WeakReference<IMainframe>

    +setMainframe(IMainframe): void
    +showContent(JPanel): String
}

abstract class ContentBuilder {
    #page: JPanel
    #constraints: GridBagConstraints
    #gridy: int

    +buildTitle(String): void
    +buildMainContent(): void
    +setUp(): void
    +clearPage(): void
}

abstract class MealForm {
  #entries: Map<String, JComponent>
  #buttons: Map<String, JButton>
  #table: PaginationTable
  #mealController: IMealController

  #handleBack(): void
}

abstract class MealFormBuilder {
  #buttons: Map<String, JButton>
  #entries: Map<String, JComponent>
  #table: PaginationTable

  + buildTopRow()
  + buildTable()
  + getButtons(): Map<String, JButton>
  + getEntries(): Map<String, JComponent>
  + getTable(): PaginationTable
}

class MealDetailBuilder {
  - nutrientTable: PaginationTable

  + buildNutritionTable(): void
  - buildButtonRow(): void
  + getNutrientTable(): PaginationTable
}

class MealDetailForm {
  - meal: Meal
  - nutrientTable: PaginationTable

  - renderEntries(): void
  - renderNutrientTable(): void
  - renderFoodTable(): void
  - getMealDetail(): void
  - mount(): void
}

class MealDetailDirector {
  - builder: MealDetailBuilder

  + constructPage(String)：void
}

MealForm -left-|> Content
Content ..|> IContent
MealDetailForm -left-> MealForm
MealDetailBuilder -right-|> MealFormBuilder
MealFormBuilder -right-|> ContentBuilder
ContentBuilder <-- MealDetailForm
MealDetailDirector -left-> ContentBuilder
MealDetailForm -up-> MealDetailDirector

@enduml